Implement global validation facilities to be used in BeanEditorBase and in BeanEditor